- New spell: Incinerate, deals damage over time in a 3x3 area
- New spell: Bomb, deals damage after a delay in a 3x3 area
- New spell: Crackle, deals damage in a line and stuns briefly
- New spell: Shadow Dagger, a dagger that passes through enemies and walls, but only deals 1 damage

2.3
- Chests don't appear while there are jailers

TODO ValidationFindBlockCycles to prevent bugs

Future content planned:
- Wand item which reduces mana costs but is terrible for melee
- Witches should drop their respective spells sometimes if you don't already have them
- Slimes which clean up items, dissolve doors, and potentially corrupt traps and such
- Slimes that catch your sword and trap it
- Enemies that grab your melee weapon and disarm you
- Perk system with perks that allow you to decrease or increase spawns of certain restraints, affect your stats, etc.
	- One Punch: Melee based perk that drastically increases melee damage but drastically reduces your ability to cast magic
- Exit stair puzzles (like for example a button or special key somewhere in the level, maybe with a high likelihood of traps)
- Inescapable yoke that needs keys, but the trap also summons rats that steal the keys and run away
	- Trapdoor (?) that drops you into the above bonus level, with no enemies other than the rats. You wake up feeling stiff, and a yoke is on your arms...
- Rats should have a kleptomaniac AI that steals items and holds them, drops them on death, and runs away from the player when confronted
- jail bars that block movement but not vision and spells
- Tranquilizer/stamina drain from an enemy (bandits? raiders?)
- Boss rooms every few floors
- Magical rope traps which require enchanted knives or advanced spells to cut?
- Enchanted knives, which are found only in chests
- Latex witches that cast latex imprisonment spells at you from a distance
- Mummification from the feet up in an egyptian style level