@@ -156,6 +156,13 @@ Bugfix:
 
 2.3
 - Chests don't appear while there are jailers
+- New spell: Invisibility
+- Balance changes
+- Buffs to the bast clerics so they stun
+- Buffs have been changed and evasion works differently (diminishing returns)
+- New area: Underground jungle
+
+TODO Add brambles: stationary plants that slow you, maximum attack width
 
 TODO ValidationFindBlockCycles to prevent bugs
 
